[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/entities/objects/weapons/melee/Fists.gd" type="Script" id=1]
[ext_resource path="res://assets/entities/items/weapons/fists/fists.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Attack1"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Fist1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ), Vector2( 31, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fist2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( -8, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fist1/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fist2/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Attack2"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Fist2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 3 ), Vector2( 6, -18 ), Vector2( 28, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fist1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, -4 ), Vector2( -8, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fist2/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fist1/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Attack3"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Fist2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 28, -4 ), Vector2( -6, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fist1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 3 ), Vector2( 8, -13 ), Vector2( 32, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fist2/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fist1/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fist2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fist1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fist2/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fist1/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fist2/Hitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fist2/Hitbox:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fist2/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fist1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fist2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Fist1/Hitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="CircleShape2D" id=10]

[node name="Fists" type="Node2D"]
script = ExtResource( 1 )
damage_value = 5.0
knockback_value = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1 = SubResource( 2 )
anims/Attack2 = SubResource( 6 )
anims/Attack3 = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 3 )

[node name="Fist2" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 4 )
hframes = 4
vframes = 4
frame = 1

[node name="Hitbox" type="Area2D" parent="Fist2"]
collision_layer = 8
collision_mask = 160

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fist2/Hitbox"]
position = Vector2( 0.499996, 2.15352e-05 )
rotation = -1.5708
shape = SubResource( 9 )
disabled = true

[node name="Fist1" type="Sprite" parent="."]
position = Vector2( -7, 0 )
texture = ExtResource( 4 )
hframes = 4
vframes = 4

[node name="Hitbox" type="Area2D" parent="Fist1"]
collision_layer = 8
collision_mask = 160

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fist1/Hitbox"]
position = Vector2( 1.19209e-07, 0 )
rotation = -1.5708
shape = SubResource( 10 )
disabled = true

[node name="AttackRestart" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackRestart" to="." method="_on_AttackRestart_timeout"]
